# polypact

./: .gitignore  INTEGRATIONS.md  Makefile  README.md  ROADMAP.md  _config.yml  pyproject.toml
.github/workflows/: ci.yml
docs/casts/: invoice_extraction.cast  logistics_pipeline.cast  research_assistant.cast
examples/00_discovery/: README.md  main.py
examples/01_invoice_extraction/: README.md  main.py
examples/02_research_assistant/: README.md  main.py
examples/03_logistics_pipeline/: README.md  main.py
src/polypact/: __init__.py  client.py  errors.py  server.py
src/polypact/adapters/: __init__.py
src/polypact/discovery/: __init__.py  agent_card.py  manifests.py
src/polypact/identity/: __init__.py  did_web.py  keys.py  signing.py
src/polypact/manifest/: __init__.py  compatibility.py  registry.py  schemas.py  validation.py
src/polypact/negotiation/: __init__.py  coordinator.py  fsm.py  schemas.py  store.py
src/polypact/transfer/: __init__.py  agreement_index.py  compose.py  delegate.py  invoker.py  lease.py  schemas.py  teach.py
src/polypact/transport/: __init__.py  errors.py  http_client.py  http_server.py  jsonrpc.py
tests/: conftest.py
tests/integration/: test_check_composition.py  test_delegate.py  test_discovery.py  test_negotiation.py  test_signed_agreements.py  test_transfer_compose.py  test_transfer_lease.py  test_transfer_teach.py
tests/unit/: test_identity.py  test_manifest_compatibility.py  test_manifest_registry.py  test_manifest_schemas.py  test_manifest_validation.py  test_negotiation_agreement_serde.py  test_negotiation_fsm.py  test_smoke.py  test_transport_jsonrpc.py
